syntax = "proto3";

message SignInPayload {
    string email = 1;
    string password = 2;
    string name = 3;
}
message SignInParams {
    string email = 1;
    string password = 2;
    string name = 3;
}
message SignInResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
    string token = 4;
}
message SignUpPayload {
    string email = 1;
    string name = 2;
    string password = 3;
}
message SignUpParams {
    string email = 1;
    string name = 2;
    string password = 3;
}
message SignUpResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
    string token = 4;
}
